MNT: Re-rendered with conda-build 3.18.11, conda-smithy 3.6.5, and conda-forge-pinning 2019.12.18

--- a/.ci_support/win_target_platformwin-64.yaml
+++ b/.ci_support/win_target_platformwin-64.yaml
@@ -15,17 +15,12 @@ pin_run_as_build:
     max_pin: x
   tk:
     max_pin: x.x
-  vc:
-    max_pin: x
 sqlite:
 - '3'
 target_platform:
 - win-64
 tk:
 - '8.6'
-vc:
-- '14.1'
 zip_keys:
-- - vc
-  - c_compiler
+- - c_compiler
   - cxx_compiler
