backport Use-ranlib patch from 3.8
closes #302

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -38,6 +38,7 @@ source:
 {% if 'conda-forge' not in channel_targets %}
       - patches/0019-Add-CondaEcosystemModifyDllSearchPath.patch
 {% endif %}
+      - patches/0020-Use-ranlib-from-env-if-env-variable-is-set.patch
   # TODO :: Depend on our own packages for these:
   - url: https://github.com/python/cpython-source-deps/archive/xz-5.2.2.zip          # [win]
     folder: externals/xz-5.2.2                                                       # [win]
