require ncurses on osx as well as linux
The _curses extension links to libncursesw.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -128,7 +128,7 @@ requirements:
     - openssl
     - readline  # [not win]
     - tk  # [not win]
-    - ncurses  # [linux]
+    - ncurses  # [not win]
     - libffi  # [not win]
     - binutils_impl_{{target_platform}}  # [aarch64]
     - ld_impl_{{target_platform}}  # [linux and not aarch64]
