--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -125,7 +125,9 @@ requirements:
     - make  # [not win]
     - pkg-config  # [not win]
     # configure script looks for llvm-ar for lto
+{% if 'conda-forge' in channel_targets %}
     - llvm-tools  # [osx]
+{% endif %}
     - patch  # [not win]
     - m2-patch  # [win]
     - posix  # [win]
