Add python_abi for 3.7 branch

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -68,7 +68,7 @@ source:
     sha256: de3c87b26a80e789986d8e6950c6304175d3829afe9c6c7211eb7257266ab0ac         # [win]
 
 build:
-  number: 2
+  number: 3
   # Windows has issues updating python if conda is using files itself.
   # Copy rather than link.
   no_link:
@@ -90,11 +90,12 @@ build:
 
   # match python.org compiler standard
   skip: True            # [win and int(float(vc)) < 14]
-# Would like to be able to append to the calculated build string here, ping @msarahan, is this possible?
-# Also this messes up hash generation so package ends up without any :-(
-# {% if linkage_nature != '' %}
-#   string: {{ version }}{{ linkage_nature }}
-# {% endif %}
+  string: h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}{{ linkage_nature }}_cpython
+  run_exports:
+    noarch:
+      - python
+    weak:
+      - python_abi 3.7.* *_cp37
 #   script_env:
 #    - PY_INTERP_LINKAGE_NATURE
 #    - python_branding
