--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -65,7 +65,7 @@ source:
 
 
 build:
-  number: 1009
+  number: 1010
   no_link:
     - bin/python2.7     # [unix]
     - DLLs/_ctypes.pyd  # [win]
@@ -75,6 +75,14 @@ build:
   ignore_run_exports:   # [unix]
     - bzip2             # [unix]
   skip: True            # [win and vc != 9]
+  string: h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}{{ linkage_nature }}_cpython
+  run_exports:
+    noarch:
+      - python
+    weak:
+      - python_abi 2.7.* *_cp27m   # [not linux]
+      - python_abi 2.7.* *_cp27mu  # [linux]
+
 
 requirements:
   build:
