Use ld_impl in aarch64 too

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -121,12 +121,10 @@ requirements:
     - tk                                 # [unix]
     - ncurses                            # [unix]
     - libffi                             # [unix]
-    - ld_impl_{{ target_platform }}      # [linux and not aarch64]
-    - binutils_impl_{{ target_platform }}   # [aarch64]
+    - ld_impl_{{ target_platform }}      # [linux]
   run:
     - ncurses                            # [unix]
-    - ld_impl_{{ target_platform }}      # [linux and not aarch64]
-    - binutils_impl_{{ target_platform }}   # [aarch64]
+    - ld_impl_{{ target_platform }}      # [linux]
 
 
 test:
