MNT: Re-rendered with conda-build 3.18.11, conda-smithy 3.6.8, and conda-forge-pinning 2020.01.28

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,7 +10,10 @@ environment:
     secure: tumuXLL8PU75WMnRDemRy02ruEq2RpNxeK3dz0MjFssnosPm2v4EFjfNB4PTotA1
 
   matrix:
-    - CONFIG: win_c_compilervs2015cxx_compilervs2015vc14
+    - CONFIG: win_c_compilervs2015cxx_compilervs2015python3.6vc14
+      CONDA_INSTALL_LOCN: C:\Miniconda36-x64
+
+    - CONFIG: win_c_compilervs2015cxx_compilervs2015python3.7vc14
       CONDA_INSTALL_LOCN: C:\Miniconda36-x64
 
 
@@ -40,7 +43,7 @@ install:
     # Tell conda we want an updated version of conda-forge-ci-setup and conda-build
     - cmd: conda.exe install -n root -c conda-forge --quiet --yes conda-forge-ci-setup=2 conda-build
     - cmd: setup_conda_rc .\ .\recipe .\.ci_support\%CONFIG%.yaml
-    
+    - cmd: run_conda_forge_build_setup
 
 # Skip .NET project specific build phase.
 build: off
