--- a/.ci_support/linux_aarch64_python3.7target_platformlinux-aarch64.yaml
+++ b/.ci_support/linux_aarch64_python3.7target_platformlinux-aarch64.yaml
@@ -35,6 +35,9 @@ pin_run_as_build:
     max_pin: x.x
   openssl:
     max_pin: x.x.x
+  python:
+    min_pin: x.x
+    max_pin: x.x
   readline:
     max_pin: x
   sqlite:
@@ -45,10 +48,14 @@ pin_run_as_build:
     max_pin: x.x
   zlib:
     max_pin: x.x
+python:
+- '3.7'
 readline:
 - '8.0'
 sqlite:
 - '3'
+target_platform:
+- linux-aarch64
 tk:
 - '8.6'
 xz:
