--- a/.ci_support/linux_ppc64le_python3.7target_platformlinux-ppc64le.yaml
+++ b/.ci_support/linux_ppc64le_python3.7target_platformlinux-ppc64le.yaml
@@ -3,7 +3,7 @@ bzip2:
 c_compiler:
 - gcc
 c_compiler_version:
-- '7'
+- '8'
 channel_sources:
 - conda-forge,defaults
 channel_targets:
@@ -11,9 +11,9 @@ channel_targets:
 cxx_compiler:
 - gxx
 cxx_compiler_version:
-- '7'
+- '8'
 docker_image:
-- condaforge/linux-anvil-comp7
+- condaforge/linux-anvil-ppc64le
 libffi:
 - '3.2'
 ncurses:
@@ -29,22 +29,25 @@ pin_run_as_build:
     max_pin: x.x
   openssl:
     max_pin: x.x.x
+  python:
+    min_pin: x.x
+    max_pin: x.x
   readline:
     max_pin: x
   sqlite:
     max_pin: x
-  tk:
-    max_pin: x.x
   xz:
     max_pin: x.x
   zlib:
     max_pin: x.x
+python:
+- '3.7'
 readline:
 - '8.0'
 sqlite:
 - '3'
-tk:
-- '8.6'
+target_platform:
+- linux-ppc64le
 xz:
 - '5.2'
 zlib:
