--- a/.ci_support/win_c_compilervs2015cxx_compilervs2015python3.7vc14.yaml
+++ b/.ci_support/win_c_compilervs2015cxx_compilervs2015python3.7vc14.yaml
@@ -7,11 +7,17 @@ channel_targets:
 cxx_compiler:
 - vs2015
 pin_run_as_build:
+  python:
+    min_pin: x.x
+    max_pin: x.x
   vc:
     max_pin: x
+python:
+- '3.7'
 vc:
 - '14'
 zip_keys:
-- - vc
+- - python
+  - vc
   - c_compiler
   - cxx_compiler
