--- a/.azure-pipelines/azure-pipelines-osx.yml
+++ b/.azure-pipelines/azure-pipelines-osx.yml
@@ -10,8 +10,14 @@ jobs:
   strategy:
     maxParallel: 8
     matrix:
-      osx_target_platformosx-64:
-        CONFIG: osx_target_platformosx-64
+      osx_python2.7target_platformosx-64:
+        CONFIG: osx_python2.7target_platformosx-64
+        UPLOAD_PACKAGES: True
+      osx_python3.6target_platformosx-64:
+        CONFIG: osx_python3.6target_platformosx-64
+        UPLOAD_PACKAGES: True
+      osx_python3.7target_platformosx-64:
+        CONFIG: osx_python3.7target_platformosx-64
         UPLOAD_PACKAGES: True
 
   steps:
@@ -73,4 +79,4 @@ jobs:
     displayName: Upload package
     env:
       BINSTAR_TOKEN: $(BINSTAR_TOKEN)
-    condition: not(eq(variables['UPLOAD_PACKAGES'], 'False'))
+    condition: and(succeeded(), not(eq(variables['UPLOAD_PACKAGES'], 'False')))
