--- a/.ci_support/linux_aarch64_python3.7target_platformlinux-aarch64.yaml
+++ b/.ci_support/linux_aarch64_python3.7target_platformlinux-aarch64.yaml
@@ -1,11 +1,17 @@
+BUILD:
+- aarch64-conda_cos7-linux-gnu
 bzip2:
 - '1'
 c_compiler:
 - gcc
 c_compiler_version:
 - '7'
+cdt_arch:
+- aarch64
+cdt_name:
+- cos7
 channel_sources:
-- conda-forge,defaults
+- conda-forge,c4aarch64,defaults
 channel_targets:
 - conda-forge main
 cxx_compiler:
@@ -13,7 +19,7 @@ cxx_compiler:
 cxx_compiler_version:
 - '7'
 docker_image:
-- condaforge/linux-anvil-comp7
+- condaforge/linux-anvil-aarch64
 libffi:
 - '3.2'
 ncurses:
@@ -29,6 +35,9 @@ pin_run_as_build:
     max_pin: x.x
   openssl:
     max_pin: x.x.x
+  python:
+    min_pin: x.x
+    max_pin: x.x
   readline:
     max_pin: x
   sqlite:
@@ -39,12 +48,14 @@ pin_run_as_build:
     max_pin: x.x
   zlib:
     max_pin: x.x
+python:
+- '3.7'
 readline:
 - '8.0'
 sqlite:
 - '3'
 target_platform:
-- linux-64
+- linux-aarch64
 tk:
 - '8.6'
 xz:
