--- a/.ci_support/linux_ppc64le_python3.7target_platformlinux-ppc64le.yaml
+++ b/.ci_support/linux_ppc64le_python3.7target_platformlinux-ppc64le.yaml
@@ -29,6 +29,9 @@ pin_run_as_build:
     max_pin: x.x
   openssl:
     max_pin: x.x.x
+  python:
+    min_pin: x.x
+    max_pin: x.x
   readline:
     max_pin: x
   sqlite:
@@ -37,6 +40,8 @@ pin_run_as_build:
     max_pin: x.x
   zlib:
     max_pin: x.x
+python:
+- '3.7'
 readline:
 - '8.0'
 sqlite:
