--- a/.ci_support/win_target_platformwin-64.yaml
+++ b/.ci_support/win_target_platformwin-64.yaml
@@ -11,12 +11,18 @@ openssl:
 pin_run_as_build:
   openssl:
     max_pin: x.x.x
+  python:
+    min_pin: x.x
+    max_pin: x.x
   sqlite:
     max_pin: x
+python:
+- '3.7'
 sqlite:
 - '3'
 target_platform:
 - win-64
 zip_keys:
-- - c_compiler
+- - python
+  - c_compiler
   - cxx_compiler
