--- a/.ci_support/linux_python3.6target_platformlinux-64.yaml
+++ b/.ci_support/linux_python3.6target_platformlinux-64.yaml
@@ -29,6 +29,9 @@ pin_run_as_build:
     max_pin: x.x
   openssl:
     max_pin: x.x.x
+  python:
+    min_pin: x.x
+    max_pin: x.x
   readline:
     max_pin: x
   sqlite:
@@ -37,10 +40,14 @@ pin_run_as_build:
     max_pin: x.x
   zlib:
     max_pin: x.x
+python:
+- '3.6'
 readline:
 - '8.0'
 sqlite:
 - '3'
+target_platform:
+- linux-64
 tk:
 - '8.6'
 zlib:
