--- a/.ci_support/win_c_compilervs2008cxx_compilervs2008python2.7vc9.yaml
+++ b/.ci_support/win_c_compilervs2008cxx_compilervs2008python2.7vc9.yaml
@@ -7,11 +7,17 @@ channel_targets:
 cxx_compiler:
 - vs2008
 pin_run_as_build:
+  python:
+    min_pin: x.x
+    max_pin: x.x
   vc:
     max_pin: x
+python:
+- '2.7'
 vc:
 - '9'
 zip_keys:
-- - vc
+- - python
+  - vc
   - c_compiler
   - cxx_compiler
