--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,4 @@
-{% set base_version = "3.8.1" %}
-{% set version = base_version %}
+{% set version = "3.8.1" %}
 {% set linkage_nature = os.environ.get('PY_INTERP_LINKAGE_NATURE', '') %}
 {% set debug = os.environ.get('PY_INTERP_DEBUG', '') %}
 {% if linkage_nature != '' %}
@@ -11,10 +10,10 @@
 
 package:
   name: python
-  version: {{ base_version }}
+  version: {{ version }}
 
 source:
-  - url: https://www.python.org/ftp/python/{{ base_version }}/Python-{{ version }}.tar.xz
+  - url: https://www.python.org/ftp/python/{{ version }}/Python-{{ version }}.tar.xz
     # md5 from: https://www.python.org/downloads/release/python-381/
     md5: b3fb85fd479c0bf950c626ef80cacb57
     patches:
@@ -78,7 +77,7 @@ source:
 
 
 build:
-  number: 3
+  number: 4
   # Windows has issues updating python if conda is using files itself.
   # Copy rather than link.
   no_link:
